# Safascord

./: .gitignore  .pr_agent.toml  CI_CD.md  DEPLOY_MULTI_SERVER.md  DEPLOY_SINGLE_SERVER.md  README.md  REBUILD_INSTRUCTIONS.md  package.json  railway.env.example
.github/workflows/: ci.yml  dependency-freshness.yml  deploy-verify.yml
backend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  railway.json  vitest.config.ts
backend/scripts/: clear-friends-dms.ts  reset-data.ts  test-dm-flow.ts
backend/src/: app.ts  server.ts
backend/src/lib/: auth.test.ts  auth.ts  db.ts  migrate.ts  redis.ts  s3.ts  stats.ts
backend/src/routes/: auth.ts  channels.ts  friends.ts  messages.ts  misc.test.ts  misc.ts  notifications.ts  servers.ts  stats.ts  uploads.ts  users.ts
frontend/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.prod  index.html  package-lock.json  package.json  railway.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: serve-dist.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthProvider.tsx  NotificationProvider.tsx
frontend/src/components/admin/: StatsPage.tsx
frontend/src/components/app/: AddFriendModal.tsx  AppShell.tsx  ChannelModal.tsx  ChannelSidebar.tsx  ChatPanel.tsx  ConfirmDialog.tsx  CreateServerModal.tsx  DMListSidebar.tsx  EditServerModal.tsx  Inbox.tsx  OverviewPanel.tsx  ServerSidebar.tsx  UserCard.tsx  UserList.tsx  UserProfileDialog.tsx  UserProfilePopover.tsx  UserSettings.tsx
frontend/src/components/routes/: ProtectedRoute.tsx  StagingGuard.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  sheet.tsx  switch.tsx  textarea.tsx
frontend/src/hooks/: useAuth.ts  useSelection.ts
frontend/src/lib/: api.test.ts  api.ts
frontend/src/pages/: Auth.tsx  DMChannel.tsx  DMs.tsx  Discover.tsx  GuildChannel.tsx  Home.test.tsx  Home.tsx  Invite.tsx  NotFound.tsx  Onboarding.tsx  Profile.tsx  Settings.tsx
frontend/src/stores/: cacheStore.ts
frontend/src/types/: channel.ts  index.ts  message.ts  responses.ts  role.ts  server.ts  user.ts
infra/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
infra/db/init/: 001_schema.sql
realtime/: Dockerfile  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  railway.json  tsconfig.json  vitest.config.ts
realtime/src/: service.test.ts  service.ts  ws.ts
rust-backend/: Cargo.toml  Dockerfile.api  Dockerfile.realtime  README.md  railway.api.json  railway.realtime.json
rust-backend/api/: Cargo.toml  Dockerfile  railway.json
rust-backend/api/src/: main.rs
rust-backend/contract-tests/: Cargo.toml
rust-backend/contract-tests/src/: main.rs
rust-backend/contract-tests/tests/: inventory.rs
rust-backend/core/: Cargo.toml
rust-backend/core/src/: auth.rs  config.rs  lib.rs  s3.rs  state.rs  stats.rs  util.rs
rust-backend/docs/: openapi.yaml  websocket-protocol.md
rust-backend/migrations/: 0001_initial_schema.sql  0002_backfills_and_indexes.sql
rust-backend/realtime/: Cargo.toml  Dockerfile  railway.json
rust-backend/realtime/src/: main.rs
