[workspace]
members = [
  "core",
  "api",
  "realtime",
  "contract-tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
aws-config = "1.8.10"
aws-sdk-s3 = "1.115.0"
axum = { version = "0.8.6", features = ["http1", "http2", "json", "multipart", "macros", "ws"] }
base64 = "0.22.1"
bcrypt = "0.17.1"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
http = "1.3.1"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = "0.1.17"
jsonwebtoken = "10.3.0"
once_cell = "1.21.3"
rand = "0.8.5"
regex = "1.12.2"
redis = { version = "0.27.6", features = ["tokio-comp"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "gzip", "stream", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
