[package]
name = "safascord-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
aws-sdk-s3.workspace = true
axum.workspace = true
base64.workspace = true
bcrypt.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
redis.workspace = true
regex.workspace = true
reqwest.workspace = true
safascord-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

