[package]
name = "safascord-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
base64.workspace = true
bcrypt.workspace = true
chrono.workspace = true
futures.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
once_cell.workspace = true
rand.workspace = true
regex.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
